[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_right = 3.05176e-05
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoresTitle" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 78.0
margin_right = 3.05176e-05
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
text = "Top 3 Scores"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoresLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 156.0
margin_bottom = 336.0
custom_fonts/font = SubResource( 3 )
text = "10
8
6"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 360.0
margin_right = 3.05176e-05
margin_bottom = 438.0
custom_fonts/font = SubResource( 2 )
text = "TOUCH ANYWHERE TO START"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -24.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the Creeps!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
